fixed bandsite title in footer alignmnent. added the links in the navbar and connected them.

--- a/styles/partials/_fonts.scss
+++ b/styles/partials/_fonts.scss
@@ -1,23 +1,23 @@
 @font-face {
     font-family: 'Avenir-Next';
-    src: url(../assets/Font/AvenirNextLTPro-Regular.otf) format("opentype"),
-        url(../assets/Font/alternative/AvenirNextLTPro.ttf) format("truetype");
+    src: url(../assets/fonts/AvenirNextLTPro-Regular.otf) format("opentype"),
+        url(../assets/fonts/alternative/AvenirNextLTPro.ttf) format("truetype");
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Avenir-Next';
-    src: url(../assets/Font/AvenirNextLTPro-Bold.otf) format("opentype"),
-        url(../assets/Font/alternative/AvenirNextLTProBold.ttf) format("truetype");
+    src: url(../assets/fonts/AvenirNextLTPro-Bold.otf) format("opentype"),
+        url(../assets/fonts/alternative/AvenirNextLTProBold.ttf) format("truetype");
     font-weight: 700;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Avenir-Next';
-    src: url(../assets/Font/AvenirNextLTPro-Demi.otf) format("opentype"),
-        url(../assets/Font/alternative/AvenirNextLTProDemi.ttf) format("truetype");
+    src: url(../assets/fonts/AvenirNextLTPro-Demi.otf) format("opentype"),
+        url(../assets/fonts/alternative/AvenirNextLTProDemi.ttf) format("truetype");
     font-weight: 600;
     font-style: normal;
 }
