--- a/styles/partials/_navbar.scss
+++ b/styles/partials/_navbar.scss
@@ -30,6 +30,10 @@
             font-size: 2.75rem;
             margin-right: 5rem;
         }
+
+        &-link {
+            text-decoration: none;
+        }
     }
 
     &__links-list {
